# BME-Partial-Picking

./: .env  .github-cleanup  .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json
.bmad-core/: install-manifest.yaml
apps/backend/: .env  Cargo.toml
apps/backend/src/: auth_handlers.rs  jwt_service.rs  ldap_service.rs  main.rs  sql_auth_service.rs
apps/bridge-service/: .env.bridge.sample  Program.cs  bridge-service.csproj
apps/bridge-service/Models/: ScaleConfiguration.cs
apps/bridge-service/Options/: ScaleServiceOptions.cs
apps/bridge-service/Services/: ScaleBroadcastService.cs  ScaleConfigurationService.cs  SerialScaleReader.cs
apps/frontend/: angular.json  package-lock.json  package.json  proxy.conf.js  proxy.conf.json
apps/frontend/src/: index.html
apps/frontend/src/app/: app.config.ts  app.routes.ts
apps/frontend/src/app/core/guards/: auth.guard.ts
apps/frontend/src/app/core/services/: auth.service.ts  weight-scale.service.ts
apps/frontend/src/environments/: environment.prod.ts  environment.ts
apps/frontend/src/styles/: globals.css
apps/frontend/src/styles/components/: animations.css  buttons.css  inputs.css
apps/frontend/src/styles/themes/: nwfth-theme.css
docs/: architecture.md  css-implementation-details.md  css-maintenance-guide.md  css-production-deployment-checklist.md  css-quick-reference.md  css-refactoring-summary.md  css-validation-report.md  environment-configuration.md  oldarchitect.md  prd.md
scripts/: README.md  kill-dev-processes.js  kill-dev-processes.sh  run-dev-services.js
(+13 files in other folders)
