[package]
name = "pk-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.12", default-features = false, features = ["native-tls", "bigdecimal", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Authentication dependencies
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
ldap3 = "0.11"
bcrypt = "0.15"

# Environment and configuration
dotenv = "0.15"
